5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4312/executions/1859_3207.log
== TEST (2019-06-26 15:05:53) 
-- CODE:
from numpy import*
q_t =int(input("Quant. de turmas: "))
q_a = int(inoput("Quant. de alunos "))
li_al = array(eval(input("Lista de alunos: ")))
 
mat = zeros(li_al, li_al)
for i in range(li_al):
	mat[i] = li_al[i]
	
y = q_t * q_a
print(mat)
print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:06:04) 
-- CODE:
from numpy import*
q_t =int(input("Quant. de turmas: "))
q_a = int(input("Quant. de alunos "))
li_al = array(eval(input("Lista de alunos: ")))
 
mat = zeros(li_al, li_al)
for i in range(li_al):
	mat[i] = li_al[i]
	
y = q_t * q_a
print(mat)
print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:07:21) 
-- CODE:
from numpy import*
q_t =int(input("Quant. de turmas: "))
q_a = int(input("Quant. de alunos "))
li_al = array(eval(input("Lista de alunos: ")))
 
mat = zeros(li_al, li_al)
for i in range(li_al):
	mat[i] = li_al[i]
	li_al = array(eval(input("Insira novamente a lista: ")))
y = q_t * q_a
print(mat)
print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:07:24) 
-- CODE:
from numpy import*
q_t =int(input("Quant. de turmas: "))
q_a = int(input("Quant. de alunos "))
li_al = array(eval(input("Lista de alunos: ")))
 
mat = zeros(li_al, li_al)
for i in range(li_al):
	mat[i] = li_al[i]
	li_al = array(eval(input("Insira novamente a lista: ")))
y = q_t * q_a
print(mat)
print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:08:25) 
-- CODE:
from numpy import*
q_t =int(input("Quant. de turmas: "))
q_a = int(input("Quant. de alunos "))
li_al = array(eval(input("Lista de alunos: ")))
 
mat = zeros(q_t*q_a)
for i in range(li_al):
	mat[i] = li_al[i]
	li_al = array(eval(input("Insira novamente a lista: ")))
y = q_t * q_a
print(mat)
print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:08:45) 
-- CODE:
from numpy import*
q_t =int(input("Quant. de turmas: "))
q_a = int(input("Quant. de alunos "))
li_al = array(eval(input("Lista de alunos: ")))
 
mat = zeros(q_t*q_a)
for i in range(mat):
	mat[i] = li_al[i]
	li_al = array(eval(input("Insira novamente a lista: ")))
y = q_t * q_a
print(mat)
print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:09:24) 
-- CODE:
from numpy import*
q_t =int(input("Quant. de turmas: "))
q_a = int(input("Quant. de alunos "))
li_al = array(eval(input("Lista de alunos: ")))
 
mat = zeros(q_t*q_a)
for i in range(mat):
	mat[i] = li_al[i]
	li_al = array(eval(input("Insira novamente a lista: ")))
y = q_t * q_a
print(mat)
print(size(mat))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:10:18) 
-- CODE:
from numpy import*
q_t =int(input("Quant. de turmas: "))
q_a = int(input("Quant. de alunos "))
li_al = array(eval(input("Lista de alunos: ")))
 
mat = zeros(q_t*q_a)
for i in range(mat):
	for j range(mat):
		mat[i] = li_al[i]
	li_al = array(eval(input("Insira novamente a lista: ")))
y = q_t * q_a
print(mat)
print(size(mat))
-- ERROR:
File "XXXX", line 8
    for j range(mat):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:10:36) 
-- CODE:
from numpy import*
q_t =int(input("Quant. de turmas: "))
q_a = int(input("Quant. de alunos "))
li_al = array(eval(input("Lista de alunos: ")))
 
mat = zeros(q_t*q_a)
for i in range(mat):
	for j in range(mat):
		mat[i] = li_al[i]
	li_al = array(eval(input("Insira novamente a lista: ")))
y = q_t * q_a
print(mat)
print(size(mat))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:11:19) 
-- CODE:
from numpy import*
q_t =int(input("Quant. de turmas: "))
q_a = int(input("Quant. de alunos "))
li_al = array(eval(input("Lista de alunos: ")))
 
mat = zeros(q_t*q_a)
for i in range(mat):
	for j in range(q_t*q_a):
		mat[i] = li_al[i]
	li_al = array(eval(input("Insira novamente a lista: ")))
y = q_t * q_a
print(mat)
print(size(mat))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:11:36) 
-- CODE:
from numpy import*
q_t =int(input("Quant. de turmas: "))
q_a = int(input("Quant. de alunos "))
li_al = array(eval(input("Lista de alunos: ")))
 
mat = zeros(q_t*q_a)
for i in range(q_t*q_a):
	for j in range(q_t*q_a):
		mat[i] = li_al[i]
	li_al = array(eval(input("Insira novamente a lista: ")))
y = q_t * q_a
print(mat)
print(size(mat))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:12:17) 
-- CODE:
from numpy import*
q_t =int(input("Quant. de turmas: "))
q_a = int(input("Quant. de alunos "))
li_al = array(eval(input("Lista de alunos: ")))
 
mat = zeros(q_t*q_a)
for i in range(q_t*q_a):
	for j in range(q_t*q_a):
		mat[i] = li_al[i]
	li_al = array(eval(input("Insira novamente a lista: ")))
y = q_t * q_a
print(mat)
print(size(mat))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:31:40) 
-- CODE:
from numpy import*
q_t =int(input("Quant. de turmas: "))
q_a = int(input("Quant. de alunos "))
li_al = array(eval(input("Lista de alunos: ")))
y = q_t*q_a

mat = zeros[y]
for i in range(y):
	for j in range(y):
		mat[i] = li_al[i]
	li_al = array(eval(input("Insira novamente a lista: ")))

print(mat)
print(size(mat))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:33:33) 
-- CODE:
from numpy import*
q_t =int(input("Quant. de turmas: "))
q_a = int(input("Quant. de alunos "))
li_al = array(eval(input("Lista de alunos: ")))
y = q_t*q_a

mat = zeros(y).split(,)
for i in range(y):
	for j in range(y):
		mat[i] = li_al[i]
	li_al = array(eval(input("Insira novamente a lista: ")))

print(mat)
print(size(mat))
-- ERROR:
File "XXXX", line 7
    mat = zeros(y).split(,)
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:33:43) 
-- CODE:
from numpy import*
q_t =int(input("Quant. de turmas: "))
q_a = int(input("Quant. de alunos "))
li_al = array(eval(input("Lista de alunos: ")))
y = q_t*q_a

mat = zeros(y).split(',')
for i in range(y):
	for j in range(y):
		mat[i] = li_al[i]
	li_al = array(eval(input("Insira novamente a lista: ")))

print(mat)
print(size(mat))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:34:05) 
-- CODE:
from numpy import*
q_t =int(input("Quant. de turmas: "))
q_a = int(input("Quant. de alunos "))
li_al = array(eval(input("Lista de alunos: ")))
y = q_t*q_a

mat = zeros((y).split(','))
for i in range(y):
	for j in range(y):
		mat[i] = li_al[i]
	li_al = array(eval(input("Insira novamente a lista: ")))

print(mat)
print(size(mat))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:34:35) 
-- CODE:
from numpy import*
q_t =int(input("Quant. de turmas: "))
q_a = int(input("Quant. de alunos "))
li_al = array(eval(input("Lista de alunos: ")))
y = q_t*q_a

mat = zeros((y).split(','), dtype=int)
for i in range(y):
	for j in range(y):
		mat[i] = li_al[i]
	li_al = array(eval(input("Insira novamente a lista: ")))

print(mat)
print(size(mat))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:35:06) 
-- CODE:
from numpy import*
q_t =int(input("Quant. de turmas: "))
q_a = int(input("Quant. de alunos "))
li_al = array(eval(input("Lista de alunos: ")))
y = q_t*q_a

mat = zeros((y.split(','))
for i in range(y):
	for j in range(y):
		mat[i] = li_al[i]
	li_al = array(eval(input("Insira novamente a lista: ")))

print(mat)
print(size(mat))
-- ERROR:
File "XXXX", line 8
    for i in range(y):
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:35:27) 
-- CODE:
from numpy import*
q_t =int(input("Quant. de turmas: "))
q_a = int(input("Quant. de alunos "))
li_al = array(eval(input("Lista de alunos: ")))
y = q_t*q_a

mat = zeros((y.split(','))
for i in range(mat):
	for j in range(y):
		mat[i] = li_al[i]
	li_al = array(eval(input("Insira novamente a lista: ")))

print(mat)
print(size(mat))
-- ERROR:
File "XXXX", line 8
    for i in range(mat):
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:35:28) 
-- CODE:
from numpy import*
q_t =int(input("Quant. de turmas: "))
q_a = int(input("Quant. de alunos "))
li_al = array(eval(input("Lista de alunos: ")))
y = q_t*q_a

mat = zeros((y.split(','))
for i in range(mat):
	for j in range(y):
		mat[i] = li_al[i]
	li_al = array(eval(input("Insira novamente a lista: ")))

print(mat)
print(size(mat))
-- ERROR:
File "XXXX", line 8
    for i in range(mat):
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:35:49) 
-- CODE:
from numpy import*
q_t =int(input("Quant. de turmas: "))
q_a = int(input("Quant. de alunos "))
li_al = array(eval(input("Lista de alunos: ")))
y = q_t*q_a

mat = zeros((y.split(','))
for i in range(mat[i,j]):
	for j in range(mat[i,j]):
		mat[i] = li_al[i]
	li_al = array(eval(input("Insira novamente a lista: ")))

print(mat)
print(size(mat))
-- ERROR:
File "XXXX", line 8
    for i in range(mat[i,j]):
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:35:51) 
-- CODE:
from numpy import*
q_t =int(input("Quant. de turmas: "))
q_a = int(input("Quant. de alunos "))
li_al = array(eval(input("Lista de alunos: ")))
y = q_t*q_a

mat = zeros((y.split(','))
for i in range(mat[i,j]):
	for j in range(mat[i,j]):
		mat[i] = li_al[i]
	li_al = array(eval(input("Insira novamente a lista: ")))

print(mat)
print(size(mat))
-- ERROR:
File "XXXX", line 8
    for i in range(mat[i,j]):
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:36:02) 
-- CODE:
from numpy import*
q_t =int(input("Quant. de turmas: "))
q_a = int(input("Quant. de alunos "))
li_al = array(eval(input("Lista de alunos: ")))
y = q_t*q_a

mat = zeros((y.split(',')))
for i in range(y):
	for j in range(y):
		mat[i] = li_al[i]
	li_al = array(eval(input("Insira novamente a lista: ")))

print(mat)
print(size(mat))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:36:20) 
-- CODE:
from numpy import*
q_t =int(input("Quant. de turmas: "))
q_a = int(input("Quant. de alunos "))
li_al = array(eval(input("Lista de alunos: ")))
y = q_t*q_a

mat = zeros((y).split(','))
for i in range(y):
	for j in range(y):
		mat[i] = li_al[i]
	li_al = array(eval(input("Insira novamente a lista: ")))

print(mat)
print(size(mat))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:42:00) 
-- CODE:
from numpy import*
q_t =int(input("Quant. de turmas: "))
q_a = int(input("Quant. de alunos "))
li_al = array(eval(input("Lista de alunos: ").split(',')))
y = q_t*q_a

mat = zeros(y)

for i in range(y):
	for j in range(y):
		mat[i] = li_al[i]
	li_al = array(eval(input("Insira novamente a lista: ")))

print(mat)
print(size(mat))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:42:25) 
-- CODE:
from numpy import*
q_t =int(input("Quant. de turmas: "))
q_a = int(input("Quant. de alunos "))
li_al = array(eval(input("Lista de alunos: ").split(',')))
y = q_t*q_a

mat = zeros(y)

for i in range(y):
	for j in range(y):
		mat[i] = li_al[i]
	li_al = array(eval(input("Insira novamente a lista: ")))

print(mat)
print(size(mat))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:45:05) 
-- CODE:
from numpy import*
q_t =int(input("Quant. de turmas: "))
q_a = int(input("Quant. de alunos "))
li_al = array(eval(input("Lista de alunos: ")))
y = q_t*q_a

mat = zeros(y).split(',')

for i in range(y):
	for j in range(y):
		mat[i] = li_al[i]
	li_al = array(eval(input("Insira novamente a lista: ")))

print(mat)
print(size(mat))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:47:59) 
-- CODE:
from numpy import*
q_t =int(input("Quant. de turmas: "))
q_a = int(input("Quant. de alunos "))
li_al = array(eval(input("Lista de alunos: ")))
y = q_t*q_a

mat = zeros(li_al).split(',')

for i in range(y):
	for j in range(y):
		mat[i] = li_al[i]
	li_al = array(eval(input("Insira novamente a lista: ")))

print(mat)
print(size(mat))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:48:05) 
-- CODE:
from numpy import*
q_t =int(input("Quant. de turmas: "))
q_a = int(input("Quant. de alunos "))
li_al = array(eval(input("Lista de alunos: ")))
y = q_t*q_a

mat = zeros(li_al).split(',')

for i in range(y):
	for j in range(y):
		mat[i] = li_al[i]
	li_al = array(eval(input("Insira novamente a lista: ")))

print(mat)
print(size(mat))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:48:18) 
-- CODE:
from numpy import*
q_t =int(input("Quant. de turmas: "))
q_a = int(input("Quant. de alunos "))
li_al = array(eval(input("Lista de alunos: ")))
y = q_t*q_a

mat = zeros(li_al)

for i in range(y):
	for j in range(y):
		mat[i] = li_al[i]
	li_al = array(eval(input("Insira novamente a lista: ")))

print(mat)
print(size(mat))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
